domains/networking/netpol/task/deploy.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: app-svc
    component: api
  name: app-svc
  namespace: secure-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: app-svc
  strategy: {}
  template:
    metadata:
      labels:
        app: app-svc
        component: api
    spec:
      containers:
        - image: nginx
          name: nginx
          ports:
            - containerPort: 80
          resources: {}
status: {}

---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    tier: fronted
  name: front-svc
  namespace: secure-app
spec:
  replicas: 2
  selector:
    matchLabels:
      tier: fronted
  strategy: {}
  template:
    metadata:
      labels:
        tier: fronted
    spec:
      containers:
        - image: alpine
          name: alpine
          command: ["/bin/sh"]
          args: ["-c", "while true; do echo hello; sleep 10;done"]
