domains/networking/netpol/task/sp.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: test-network-policy
  namespace: secure-app
spec:
  podSelector:
    matchLabels:
      component: api
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          tier: fronted
    ports:
    - protocol: TCP
      port: 8080
